--- a/templates/login.html
+++ b/templates/login.html
@@ -25,7 +25,7 @@
         <input type="text" placeholder="Enter your username" required name="uname">
       </div>
       <div class="input-box">
-        <input type="password" placeholder="Enter your password" required name="pass">
+        <input type="password" placeholder="Enter your password" required name="passw">
       </div>
       <div class="policy">
       </div>
